--- a/src/layouts/navbar.astro
+++ b/src/layouts/navbar.astro
@@ -22,7 +22,7 @@
     a h6 {
         margin: 0 0;
         color: #1D3B51;
-        font-family: 'Poppins', serif;
+        font-family: 'Poppins-Medium', serif;
         font-size: 2vw;
         font-weight: 500;
     }
