--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,7 @@
 ---
-import Navbar from '../layouts/navbar.astro'
+import Layout from '../layouts/layout.astro'
 ---
 
-<Navbar />
+<Layout>
+
+</Layout>
