--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from './navbar.astro'
 import Footer from './footer.astro'
-import '../styles/styles.css'
+import '../styles/global.css'
 ---
 
 <html lang="en">
