--- a/src/layouts/navbar.astro
+++ b/src/layouts/navbar.astro
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: space-between;
         max-width: 60vw;
-        margin: 5% auto;
+        margin: 5vw auto 10vw auto;
     }
 
     a:-webkit-any-link {
@@ -23,7 +23,7 @@
         margin: 0 0;
         color: #1D3B51;
         font-family: 'Poppins-Medium', serif;
-        font-size: 2vw;
+        font-size: 1.5vw;
         font-weight: 500;
     }
 
