--- a/src/components/home/brand.astro
+++ b/src/components/home/brand.astro
@@ -28,7 +28,7 @@ import social from '/images/home/brand/social_media.svg'
         background-size: 60vw auto;
         background-position-x: 30vw;
         height: 60vw;
-        margin-left: 10vw;
+        margin: 0 0 15vw 10vw;
     }
 
     .data {
