--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,12 @@
 ---
 import Layout from '../layouts/layout.astro'
 import Brand from '../components/home/brand.astro'
-import TextOne from '../components/home/text-one.astro'
-import TextTwo from '../components/home/text-two.astro'
+import CopyWriting from '../components/home/copywriting.astro'
 import Bottom from '../components/home/bottom.astro'
 ---
 
 <Layout>
 	<Brand />
-	<TextOne />
-	<TextTwo />
+	<CopyWriting />
 	<Bottom />
 </Layout>
