--- a/src/components/home/bottom.astro
+++ b/src/components/home/bottom.astro
@@ -1,12 +1,13 @@
 ---
+import { Image } from '@astrojs/image/components'
 import heroposts from '/images/home/heroposts.svg'
 import media from '/images/home/brand/social_media.svg'
 ---
 
 <section>
     <h3>Automatic text generation using language models</h3>
-    <img src={heroposts} alt="Posts" class="hero-posts"/>
-    <img src={media} alt="Social Media" class="media"/>
+    <Image src={heroposts} alt="Posts" class="hero-posts"/>
+    <Image src={media} alt="Social Media" class="media"/>
     <a href="/contact"><div>Contact Us</div></a>
 </section>
 
