--- a/src/components/home/brand.astro
+++ b/src/components/home/brand.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from '@astrojs/image/components'
 import logo from '/images/home/brand/logo.svg'
 import hero from '/images/home/brand/hero.svg'
 import social from '/images/home/brand/social_media.svg'
@@ -7,16 +8,16 @@ import social from '/images/home/brand/social_media.svg'
 <section>
     <div>
         <div class="brand">
-            <img src={logo} alt="Logo" class="logo"/>
+            <Image src={logo} alt="Logo" class="logo"/>
             <h1>Postagram</h1>
         </div>
         <div class="data">
             <h2>Personalized and unique content</h2>
             <p>automatic generation of text using language models</p>
-            <img src={social} alt="Social Media"/>
+            <Image src={social} alt="Social Media"/>
         </div>
     </div>
-    <img src={hero} alt="Hero"class="hero-image"/>
+    <Image src={hero} alt="Hero"class="hero-image"/>
 </section>
 
 <style>
