Hotfix @astrojs/image implementation

--- a/src/components/home/bottom.astro
+++ b/src/components/home/bottom.astro
@@ -1,13 +1,10 @@
 ---
-import { Image } from '@astrojs/image/components'
-import heroposts from '/images/home/heroposts.svg'
-import media from '/images/home/brand/social_media.svg'
 ---
 
 <section>
     <h3>Automatic text generation using language models</h3>
-    <Image src={heroposts} alt="Posts" class="hero-posts"/>
-    <Image src={media} alt="Social Media" class="media"/>
+    <img src="/images/home/heroposts.svg" alt="Posts" class="hero-posts"/>
+    <img src="/images/home/social_media.svg" alt="Social Media" class="media"/>
     <a href="/contact"><div>Contact Us</div></a>
 </section>
 
