--- a/src/components/home/copywriting.astro
+++ b/src/components/home/copywriting.astro
@@ -1,12 +1,9 @@
 ---
-import { Image } from '@astrojs/image/components'
-import ninja from '/images/home/text-one/ninja.svg'
-import brain from '/images/home/text-two/brain.svg'
 ---
 
 <section>
     <div class="ninja">
-        <Image src={ninja} alt="Ninja">
+        <img src="/images/home/ninja.svg" alt="Ninja">
         <div class="data">
             <h2>Online design and editing</h2>
             <p>
@@ -22,7 +19,7 @@ import brain from '/images/home/text-two/brain.svg'
                 Automatic text generation using language models
             </p>
         </div>
-        <Image src={brain} alt="Brain">
+        <img src="/images/home/brain.svg" alt="Brain">
     </div>
 </section>
 
