--- a/src/components/home/brand.astro
+++ b/src/components/home/brand.astro
@@ -1,30 +1,26 @@
 ---
-import { Image } from '@astrojs/image/components'
-import logo from '/images/home/brand/logo.svg'
-import hero from '/images/home/brand/hero.svg'
-import social from '/images/home/brand/social_media.svg'
 ---
 
 <section>
     <div>
         <div class="brand">
-            <Image src={logo} alt="Logo" class="logo"/>
+            <img src="/images/home/logo.svg" alt="Logo" class="logo"/>
             <h1>Postagram</h1>
         </div>
         <div class="data">
             <h2>Personalized and unique content</h2>
             <p>automatic generation of text using language models</p>
-            <Image src={social} alt="Social Media"/>
+            <img src="/images/home/social_media.svg" alt="Social Media"/>
         </div>
     </div>
-    <Image src={hero} alt="Hero"class="hero-image"/>
+    <img src="/images/home/hero.svg" alt="Hero"class="hero-image"/>
 </section>
 
 <style>
     section {
         display: flex;
         justify-content: space-between;
-        background-image: url('/images/home/brand/background.svg');
+        background-image: url('/images/home/background.svg');
         background-repeat: no-repeat;
         background-size: 60vw auto;
         background-position-x: 30vw;
